--- a/exercicos-udemy/html-css/animações/css/style.css
+++ b/exercicos-udemy/html-css/animações/css/style.css
@@ -6,7 +6,8 @@
         left: 0;
     }
     to { /* Estado final */
-        background: blue;
+        background: url(../georgerussell.jpg) no-repeat;
+        
 
         border-radius: 300px;
         top: 200px;
@@ -16,13 +17,13 @@
 
 @keyframes animacao-caixa {
     from { /* Estado inicial */
-        background: red;
+        background: url(../georgerussell.jpg) center;
         font-size: 0.1em;
         top: 0;
         left: 0;
     }
     to { /* Estado final */
-        background: blue;
+        background: url(../mercedes50.jpg) center;
         font-size: 3em;
         font-family: monospace;
         border-radius: 300px;
@@ -33,7 +34,7 @@
 
 @-moz-keyframes animacao-caixa {
     from { /* Estado inicial */
-        background: red;
+        background: url(../georgerussell.jpg) no-repeat;
         top: 0;
         left: 0;
     }
@@ -53,7 +54,7 @@
         left: 0;
     }
     to { /* Estado final */
-        background: blue;
+        background: url(../georgerussell.jpg) no-repeat;
 
         border-radius: 300px;
         top: 200px;
@@ -66,7 +67,7 @@
     height: 300px;
 
     background: red;
-    position: relative;
+    position: absolute;
     /*
     animation-name: animacao-caixa;
     animation-duration: 5s;
