--- a/exercicos-udemy/html-css/Spotify/css/estilo.css
+++ b/exercicos-udemy/html-css/Spotify/css/estilo.css
@@ -3,11 +3,26 @@
 * @author Jamilton Damasceno
 */
 
+html, body, #home{
+    border: 1px solid red;
+    height: 100%;
+}
+
+
+
 body{
     background: url(../imagens/capa.png),
                 url(../imagens/ruido.png),
                 linear-gradient(50deg, #ff4169, #7c26f8);
                 background-attachment: fixed;
+
+    font-family:  Helvetica,Arial,  sans-serif;
+
+    
+}
+
+header{
+    height: 580px;
 }
 
 nav{
@@ -15,11 +30,76 @@ nav{
     padding: 15px 0px;
 }
 
-.navbar-nav .nav-link{
-    color: red;
+.divisor{
+    width: 1px;
+    background-color: white;
+    margin: 12px 15px;
 }
+
+
+
+.navbar-light .navbar-nav .nav-link{
+    color: white;
+}
+
+.navbar-light .navbar-nav .nav-link:hover{
+    color: #9bf0e1;
+}
+
+.navbar-light .navbar-toggler {
+    color: rgba(255, 255, 255, .5);
+    border-color: rgba(255, 255, 255, 0.5);
+}
+
+/*Capa
+----------------------------------*/
+
+.capa{
+    text-align: center;
+}
+
+/*Tipografia
+----------------------------------*/
+h1{
+    font-weight: 900;
+    letter-spacing: 0.05em;
+    margin-bottom: 50px;
+    color: white;
+}
+
+/*/ Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px) { 
+
+    h1{
+        font-size: 1em;
+    }
+}
+
+/* Small devices (landscape phones, less than 768px)*/
+@media (max-width: 767.98px) {
+    h1{
+        font-size: 4em;
+    }
+
+
+ }
+
+/* Medium devices (tablets, less than 992px)*/
+@media (max-width: 991.98px) { 
+    h1{
+        font-size: 5em;
+    }
+ }
+
+/*/ Large devices (desktops, less than 1200px)*/
+@media (max-width: 1199.98px) { 
+    h1{
+    font-size: 6em;
+    }
+ }
 
 .Sobre h2{
     color: hsl(265, 94%, 56%);
 }
-#bah{color: rgb(248, 38, 38);}
+
+
