--- a/exercicios/ex025/estilo.css
+++ b/exercicios/ex025/estilo.css
@@ -16,7 +16,7 @@
         padding: 5px;
         width: 90vw;
     }
-    input{
+    input, textarea{
         border-start-end-radius: 5px;
         border-end-start-radius: 5px;
 
@@ -62,4 +62,3 @@
         padding: 3px;
         text-shadow: 3px 2.2px rgba(0, 0, 0, 0.306);
     }
-    
