--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -2,4 +2,88 @@
 
 /* Todas as demais mídias*/
 
-@media print {}
+/* Typical Device Breakpoints
+hoje em Junho de 2023 ta assim
+Mobile devices – 320px — 480px.
+iPads, Tablets – 481px — 768px.
+Small screens, laptops – 769px — 1024px.
+Desktops, large screens – 1025px — 1200px.
+Extra large screens, TV – 1201px, and more.
+
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: none;}
+    img#tv { display: none;}
+    img#pc { display: none;}
+
+*/
+
+
+@media print {
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+    body{
+        background-image: url(../imagens/back-print.jpg);
+    }
+    main{
+        width:90vw;
+        
+        border: 2px inset rgba(119, 255, 0, 0.521);
+    }
+    main h1{
+        text-shadow: none;
+        color: black;
+
+    }
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: block;}
+    img#pc { display: none;}
+    img#tv { display: none;}
+
+    main::after{
+        content: 'Essa impressão foi feita atravéz do site sistemasdsr.com.br';
+        font-size: 0.9em;
+        
+        text-decoration: overline;
+    }
+}
+
+@media screen and (min-width: 600px) and (max-width: 992px){
+
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#phone { display: none;}
+    img#tablet { display: block;}
+    img#print { display: none;}
+    img#tv { display: none;}
+    img#pc { display: none;}
+
+}
+@media screen and (min-width: 992px) and (max-width: 1200px){
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: none;}
+    img#pc { display: block;}
+    img#tv { display: none;}
+
+}
+@media screen and (min-width:1200px) {
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+
+    }
+    main{
+        opacity: 85%;
+    }
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: none;}
+    img#pc { display: none;}
+    img#tv { display: block;}
+}
