--- a/exercicios/ex026/mq005/estilos/media-query.css
+++ b/exercicios/ex026/mq005/estilos/media-query.css
@@ -1,2 +1,33 @@
 @charset "UTF-8";
 
+@media screen and (min-width:700px){
+    span#burger {
+        display: none;
+    }
+    menu{
+        display: block;
+        background-color: rgb(31, 26, 26);
+    }
+    menu > ul > li {
+        display: inline-block;
+        
+        padding-left: 5px;
+        border-radius: 5px;
+        margin-left: 15px;
+
+    }
+    menu > ul > li > a{
+
+        background-color: rgb(31, 26, 26);
+        display: inline-block;
+    }
+    menu > ul > li > a:hover{
+        background-color: rgb(18, 14, 14);
+        cursor: grab;
+        transition-duration: 0.2s;
+        
+    }
+    main {
+        width: 700px;
+    }
+}
