--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -39,7 +39,7 @@ menu > ul > li > a{
     padding: 10px;
     text-decoration: none;
     text-align: center;
-    background-color: #be0f09;
+    background-color: rgb(19, 15, 15);
     color: white;
     border-top: 2px solid rgba(89, 89, 89, 0.336);
 }
@@ -66,8 +66,10 @@ article > p{
     text-indent: 20px;
 }
 article > p > span{
-    font-stretch: expanded;
+
+    font-stretch: ultra-expanded;
+    font-size: 1.1em;
     font-style: italic;
-    color: rgb(188, 66, 66);
-    vertical-align: middle;
+    color: rgb(255, 0, 0);
+    vertical-align: sub;
 }
