--- a/exercicos-udemy/jquery/pasta_estilos/estilo_pasta_rma.css
+++ b/exercicos-udemy/jquery/pasta_estilos/estilo_pasta_rma.css
@@ -1,16 +1,23 @@
 @charset "UTF-8";
 
+
+
 body{
     background-color: rgb(139, 139, 139);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     font-size: 1.2em;
     color: white;
+    padding: 10px;
+    display: flex;
+    align-content: flex-end;
+    justify-content: space-evenly;
 }
 
 input{
     border: 1px solid honeydew;
     border-radius: 4px;
+    
 
 }
 input:hover{
